# CRPI

./: CRPI.opt  CRPI.sln  CRPI_VS2015.sln  CRPI_lite.sln  Makefile_sample  README.md  buildLinuxCRPI.py  portable.h  types.h
Applications/Application_CRPI_Test/: Application_CRPI_Test.vcxproj  Source.cpp
Applications/CRPI_Eval/: CRPI_Eval.vcproj  CRPI_Eval.vcxproj  CRPI_Eval.vcxproj.filters  CRPI_Eval_VS2015.vcxproj  CRPI_Eval_VS2015.vcxproj.filters  crpi_eval.cpp  robotiq.xml
Applications/XMLInterface/: XMLInterface.cpp  XMLInterface.vcproj  XMLInterface.vcxproj  XMLInterface.vcxproj.filters  XMLInterface_VS2015.vcxproj  XMLInterface_VS2015.vcxproj.filters  abb_irb14000_left.xml  abb_irb14000_right.xml  kuka_lwr.xml  robotiq.xml  universal_ur10_left.xml  universal_ur10_right.xml  universal_ur5_table.xml
Clustering/: Clustering.dsp  Clustering.plg.html  Clustering.vcproj  Clustering.vcxproj  Clustering_VS2015.vcxproj  Clustering_VS2015.vcxproj.filters
Clustering/Cluster/: Cluster.cpp  Cluster.h
Clustering/Patterns/: NumPattern.cpp  NumPattern.h  Pattern.cpp  Pattern.h
Clustering/kMeans/: kMeansCluster.cpp  kMeansCluster.h
Debug/: Library_CRPI.exp  Library_CRPI.lib  Math.exp  Math.ilk  Math.lib  Serial.exp  Serial.ilk  Serial.lib  kuka_lwr.xml  ulapi_VS2015.exp  ulapi_VS2015.idb  ulapi_VS2015.ilk  ulapi_VS2015.lib  universal_ur10_right.xml
Debug/CRPI/: CRPI_BuildLog.htm  Library_CRPI.idb
Debug/CRPI_Test/: CRPI_Test.idb
Debug/Math/: Math.idb  Math_BuildLog.htm
HRI_eval/: form_startpage.html
Libraries/ulapi/lib/: CMakeLists.txt  Makefile.am
(+200 files in other folders)
